2002-02-25  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* mips-gp64-fp32-pic.d: Fix test of 64bit register loads.
	* mips-gp64-fp32-pic.s: Likewise.
	* mips-gp64-fp32.d: Likewise.
	* mips-gp64-fp32.s: Likewise.
	* mips-gp64-fp64-pic.d: Likewise.
	* mips-gp64-fp64-pic.s: Likewise.
	* mips-gp64-fp64.d: Likewise.
	* mips-gp64-fp64.s: Likewise.

2002-02-25  Alan Modra  <amodra@bigpond.net.au>

	* gas/hppa/reloc/reloc.exp: Update copyright date.

2002-02-24  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/bspec-1.d, gas/mmix/bspec-2.d, gas/mmix/comment-1.d:
	Adjust to changes in readelf output.

2002-02-22  Nick Clifton  <nickc@cambridge.redhat.com>

	* gasp/gasp.exp: If gasp does not exist, do not complain, just
	exit silently.

2002-02-20  Tom Rix  <trix@redhat.com>

	* gas/ppc/ppc.exp: Add xcoff booke tests.
	* gas/ppc/booke_xcoff.s: New.
	* gas/ppc/booke_xcoff.d: New.
	* gas/ppc/booke_xcoff64.s: New.
	* gas/ppc/booke_xcoff64.d: New.

2002-02-18  Daniel Jacobowitz  <drow@mvista.com>

	* gas/sh/basic.exp: Don't run PIC tests for targets that don't
	support it.

2002-02-14  Tom Rix  <trix@redhat.com>

	* gas/ppc/ppc.exp: Add xcoff altivec tests.
	* gas/ppc/altivec_xcoff.s: New.
	* gas/ppc/altivec_xcoff.d: New.
	* gas/ppc/altivec_xcoff64.s: New.
	* gas/ppc/altivec_xcoff64.d: New.

2002-02-13  Ben Elliston  <bje@redhat.com>

	* gasp/flonums.asm: New test.
	* gasp/flonums.err: New result.
	* gasp/flonums.out: Likewise.

2002-02-12  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* gas/hppa/reloc/reloc.exp (labelopbug.s): Change test to suit
	hppa_fix_adjustable change.

2002-02-09  Richard Henderson  <rth@redhat.com>

	* gas/alpha/elf-reloc-5.s, gas/alpha/elf-reloc-5.d: New.
	* gas/alpha/elf-reloc-6.s, gas/alpha/elf-reloc-6.l: New.
	* gas/alpha/alpha.exp: Run them.

2002-02-08  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/mips.exp: Document (but do not XFAIL) currently-failing
	MIPS ECOFF tests, providing what information is known about